--- a/Final.Rmd
+++ b/Final.Rmd
@@ -3,11 +3,11 @@ output: pdf_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE, warning=FALSE)
 ```
 
 
-```{r echo=FALSE}
+```{r}
 setwd(getwd())
 
 library(readxl)
@@ -27,3 +27,53 @@ for (n in 1:nrow(loss)) {
 
 
 ```
+
+# 11.53
+
+### Taste  
+Mean = `r mean(taste)`  
+Median = `r median(taste)`  
+Standard deviation = `r sd(taste)` 
+Interquartile range = `r IQR(taste)`
+```{r out.width="50%"}
+stem(taste)
+qqnorm(taste, pch = 1, frame = FALSE)
+qqline(taste, col = "steelblue", lwd = 2)
+```
+
+
+### Acetic
+Mean = `r mean(acetic)`   
+Median = `r median(acetic)`  
+Standard deviation = `r sd(acetic)`  
+Interquartile range = `r IQR(acetic)`  
+```{r out.width = "50%"}
+stem(acetic)
+qqnorm(acetic, pch = 1, frame = FALSE)
+qqline(acetic, col = "steelblue", lwd = 2)
+```
+
+### H2S
+Mean = `r mean(h2s)`   
+Median = `r median(h2s)`  
+Standard deviation = `r sd(h2s)`  
+Interquartile range = `r IQR(h2s)`  
+```{r out.width = "50%"}
+stem(h2s)
+qqnorm(h2s, pch = 1, frame = FALSE)
+qqline(h2s, col = "steelblue", lwd = 2)
+```
+
+### Lactic
+Mean = `r mean(lactic)`   
+Median = `r median(lactic)`  
+Standard deviation = `r sd(lactic)`  
+Interquartile range = `r IQR(lactic)`  
+```{r out.width = "50%"}
+stem(lactic)
+qqnorm(lactic, pch = 1, frame = FALSE)
+qqline(lactic, col = "steelblue", lwd = 2)
+```
+
+
+
